<resources>
    <string name="app_name">SICSR Attendance</string>
    <string name="sicsr_logo_description">Sicsr logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_get_help_image">login get help image</string>
    <string name="get_help">Get help!</string>
    <string name="get_yourself_registered">if you don\'t have an account, visit the server administration department to get yourself registered.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_description">In case if you have forgotten your password, visit the server administration department.</string>
    <string name="don_t_have_an_accout">Don\'t have an accout?</string>
    <string name="title_activity_thome_">THome_Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_faculty__home">Faculty_HomeActivity</string>
    <string name="nav_header_img">nav_header_img</string>
    <string name="nav_header_setting_image_button">nav header setting image button</string>
    <string name="logout">Logout</string>
    <string name="record_attendance">Record Attendance</string>
    <string name="today_s_schedule">Today\'s Schedule</string>
    <string name="home_banner">home banner</string>
    <string name="time">Time</string>
    <string name="course">Course</string>
    <string name="venue">Venue</string>
    <string name="status">Status</string>
    <string name="title_activity_student_home">Student_homeActivity</string>
    <string name="seeting_image_on_student_nav">seeting image on student nav</string>
    <string name="program">program</string>
    <string name="Program">Program</string>
    <string name="semester">Semester</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="lectures">Lectures</string>
    <string name="attendance_report">Attendance Report</string>
    <string name="title_activity_faculty__record">Faculty_RecordActivity</string>
    <string name="title_activity_faculty__schedule">Faculty_ScheduleActivity</string>
    <string name="title_activity_faculty__lecture">Faculty_LectureActivity</string>
    <string name="title_activity_student__lecture">Student_LectureActivity</string>
    <string name="title_activity_student__schedule">Student_ScheduleActivity</string>
    <string name="title_activity_student__report">Student_ReportActivity</string>
    <string name="title_activity_faculty__lecture2">Faculty_LectureActivity2</string>
    <string name="choose_course">Choose Course</string>
    <string name="lecture_history">Lecture History</string>
    <string name="title_activity_student__lecture2">Student_LectureActivity2</string>
    <string name="end_lecture">End Lecture</string>
    <string name="today_s_lecture_s_learning_objective">Today\'s Lecture\'s Learning Objective:</string>
    <string name="enter_learning_objective">Enter Learning Objective.</string>
    <string name="save">Save</string>
</resources>
