<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:stretchColumns="*">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">
    <TextView
        android:id="@+id/textView8"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/time"
        android:textColor="#000000"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/course"
        android:textColor="#000000"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/textView9"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/semester"
        android:textColor="#000000"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/textView10"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/venue"
        android:textColor="#000000"
        android:textSize="20sp" />
    </TableRow>
    </TableLayout>
