<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.devanshisukhija.sicsrattendance.Controller.FacultyWrap.Faculty_HomeActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/app_bar_faculty__home">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="228dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/sicsr_banner"
        android:contentDescription="@string/home_banner"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/faculty_home_dayStamp"
        android:layout_width="105dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_color_custom"
        android:fontFamily="@font/open_sans"
        android:textAlignment="center"
        android:textColor="?android:attr/colorLongPressedHighlight"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Monday" />

    <TextView
        android:id="@+id/faculty_home_dateStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_color_custom"
        android:fontFamily="@font/open_sans"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textSize="45sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faculty_home_dayStamp"
        tools:text="17, Oct 2018" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/sicsrYellow"
        android:fontFamily="@font/open_sans"
        android:text="@string/today_s_schedule"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faculty_home_dateStamp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/faculty_home_recordAttendance"
        android:onClick="faculty_record_attendanc_clicked"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/record_attendance"
        android:textColor="@color/sicsrYellow"
        android:background="@drawable/background_color_custom"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_bar"
        android:fillViewport="false"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/faculty_home_recordAttendance"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/main_layout"
        app:layout_constraintRight_toRightOf="@id/main_layout"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <TableLayout
            android:id="@+id/faculty_table_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="681dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/time"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:paddingLeft="0dp"
                    android:text="@string/course"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:paddingLeft="0dp"
                    android:text="Program"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:paddingLeft="0dp"
                    android:text="@string/venue"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:paddingLeft="0dp"
                    android:text="@string/semester"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/faculty_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>
        </TableLayout>
    </HorizontalScrollView>

</android.support.constraint.ConstraintLayout>
</ScrollView>