<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
    <!--tools:context="com.devanshisukhija.sicsrattendance.Controller.Student_homeActivity"-->
    <!--tools:showIn="@layout/app_bar_student_home">-->

    <android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.devanshisukhija.sicsrattendance.Controller.Student_homeActivity"
    tools:showIn="@layout/app_bar_student_home" >

    <ImageView
        android:id="@+id/student_imageView"
        android:layout_width="0dp"
        android:layout_height="228dp"
        android:contentDescription="@string/home_banner"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/sicsr_banner" />

        <TextView
            android:id="@+id/student_home_dayStamp"
            android:layout_width="105dp"
            android:layout_height="33dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_color_custom"
            android:fontFamily="@font/open_sans"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/student_home_dateStamp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Monday" />

        <TextView
            android:id="@+id/student_home_dateStamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_color_custom"
            android:fontFamily="@font/open_sans"
            android:textAlignment="center"
            android:textColor="@color/cardview_light_background"
            android:textSize="45sp"
            android:textStyle="normal"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/student_textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/student_home_dayStamp"
            tools:text="17, Oct 2018" />

        <TextView
            android:id="@+id/student_textView6"
            android:layout_width="300dp"
            android:layout_height="46dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:background="@color/sicsrYellow"
            android:fontFamily="@font/open_sans"
            android:text="@string/today_s_schedule"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/student_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/student_home_dateStamp" />


    <HorizontalScrollView
        android:id="@+id/student_horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="285dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_red_dark"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_imageView"
        app:layout_constraintVertical_bias="0.0">

        <TableLayout
            android:id="@+id/student_home_tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintVertical_bias="0.3">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff">

                <TextView
                    android:id="@+id/student_textView8"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/time"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/student_textView7"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/course"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/student_textView9"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/semester"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/student_textView10"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/venue"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:visibility="visible" />
            </TableRow>

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible">

            </android.support.v7.widget.RecyclerView>

        </TableLayout>
    </HorizontalScrollView>

</android.support.constraint.ConstraintLayout>
<!--</ScrollView>-->
